--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <li>node</li>
     </ol>
     <!-- dl dd dt  -->
-     <h1>github page</h1>
+    <h1>github page</h1>
+    <a href="/lecture3/index.html" target="_blank">lecture 3</a>
+    <a href="/lecture4/index.html"> lecture 4 </a>
   </body>
 </html>
