--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ol>
     <!-- dl dd dt  -->
     <h1>github page</h1>
-    <a href="/lecture3/index.html" target="_blank">lecture 3</a>
-    <a href="/lecture4/index.html"> lecture 4 </a>
+    <a href="/html-9-am/lecture3/index.html" target="_blank">lecture 3</a>
+    <a href="/html-9-am/lecture4/index.html"> lecture 4 </a>
   </body>
 </html>
